force-app/main/default/objects/Set_Aside_Contribution__c/Set_Aside_Contribution__c.object-meta.xml
<CustomObject>
    <label>Set Aside Contribution</label>
    <nameField>
        <label>Set Aside Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Set Aside Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>