force-app/main/default/objects/Set_Aside_Contribution__c/fields/Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Request__c</fullName>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipLabel>Set Aside Contributions</relationshipLabel>
    <relationshipName>Set_Aside_Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>