force-app/main/default/objects/Set_Aside_Contribution__c/fields/Set_Aside_Category__c.field-meta.xml
<CustomField>
    <fullName>Set_Aside_Category__c</fullName>
    <label>Set Aside Category</label>
    <referenceTo>GrantsSetAsideCategory__c</referenceTo>
    <relationshipLabel>Set Aside Contributions</relationshipLabel>
    <relationshipName>Set_Aside_Contributions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>